--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ whitelist           : []
 plugins             : []
 
 # Conversion
+markdown: GFM
 highlighter         : rouge
 lsi                 : false
 excerpt_separator   : "\n\n"
